--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
 		.ipgs-control-zoom-out {
 			display: none;
 		}
+
 	</style>
 </head>
 
 <body>
 	<!-- Button trigger modal -->
-	<button onclick="flipOpen()">
-		Launch static backdrop modal
+	<button onclick="flipOpen()" style="margin-top: 300px;">
+		open pdf
 	</button>
 
 
@@ -59,7 +60,7 @@
 	<div class="flip-window">
 		<button class="book-close">x</button>
 		<div class="reset" style="height: 100vh; width: 100%;">
-		
+
 		</div>
 
 	</div>
